added warning icon for server error

--- a/styles/style.css
+++ b/styles/style.css
@@ -80,3 +80,56 @@
     text-align: center;
     color:grey;
 }
+
+.warning-wrapper {
+    position: absolute;
+    top:130px;
+    right:30;
+    display: none;
+}
+
+.warning-icon {
+    color:red;
+    position: relative;
+    display: inline-block;
+    height:100px;
+    width:50px;
+}
+
+/* Tooltip text */
+.warning-icon .tooltiptext {
+    font-family: Noto Sans JP, Raleway, Inter;
+    font-size: 13;
+    visibility: hidden;
+    background-color: lightgrey;
+    color: black;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+   
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+
+    /* Bottom tooltip */
+    width: 120px;
+    top: 45%;
+    left: 50%;
+    margin-left: -69px; /* Use half of the width (120/2 = 60), to center the tooltip */
+  }
+  
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .warning-icon:hover .tooltiptext {
+    visibility: visible;
+  }
+
+  .warning-icon .tooltiptext::after {
+    content: " ";
+    position: absolute;
+    bottom: 100%;  /* At the top of the tooltip */
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent lightgrey transparent;
+  }
