--- a/styles/style.css
+++ b/styles/style.css
@@ -25,8 +25,8 @@
 }
 
 .content {
-    border: 2px solid lightgrey;
-    border-radius: 5px;
+    border: 1px solid lightgrey;
+    /* border-radius: 5px; */
     background: linear-gradient(to bottom,#8cd0e3 0,#f08ccd 100%);
     padding: 30px;
 }
